# streamlit-template

./: Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: codeql.yml
src/: start.sh  streamlit_app.py
tests/: lint.sh
