[build-system]
requires = ["setuptools"]

[project]
requires-python = ">=3.9"
version = "1"
name = "streamlit-template"
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    ]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    ]

[tool.black]
line-length = 120
target-version = ["py311"]
